recuperation nom chat

--- a/public/chat.pug
+++ b/public/chat.pug
@@ -11,7 +11,7 @@ html
         #chat-window
             #output
             #feedback
-        input#handle(type='text', placeholder='Handle')
+        input#handle(type='text', placeholder=user.name)
         input#message(type='text', placeholder='Message')
         button#send Send
 
